--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   pin_dot: ^1.0.1
   local_auth: ^1.1.6
   animated_bottom_navigation_bar: ^0.3.2
+  flutter_map: ^0.13.1
+  http: ^0.13.3
+  
 
 dev_dependencies:
   flutter_test:
