--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -40,6 +40,11 @@ dependencies:
   animated_bottom_navigation_bar: ^0.3.2
   flutter_map: ^0.13.1
   http: ^0.13.3
+  font_awesome_flutter: ^9.1.0
+  shared_preferences: ^2.0.7
+  qr_flutter: ^4.0.0
+  qr_code_scanner: ^0.5.2
+  pin_code_fields: ^7.3.0
   
 
 dev_dependencies:
